--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
-APP_NAME=Laravel
+APP_NAME=Advisor
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:a+Nsb9h6or4it0wCyg89kV2/9F4j3AEFFopOy9TEha0=
 APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=test
 DB_USERNAME=root
 DB_PASSWORD=
 
